--- a/demos/reactMobx/public/index.html
+++ b/demos/reactMobx/public/index.html
@@ -2,12 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script>
+      window['%PUBLIC_URL%'] = '.';
+    </script>
     <title>My App</title>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="${process.env.PUBLIC_URL}/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div id="root"></div>
-    <script src="./dist/bundle.js"></script>
   </body>
 </html>
