--- a/playground/editableTable.html
+++ b/playground/editableTable.html
@@ -89,6 +89,60 @@
             cell.textContent;
         }
       });
+
+      function handleTreeData(data, parentIsAuth){
+        if(typeof data !== 'object' || !data) return;
+        if(Array.isArray(data)){
+          data.forEach((item, index) => {
+            handleTreeData(item, parentIsAuth);
+          })
+      } else {
+        data.isAuth = data.isAuth || parentIsAuth;
+        data.children && data.children.forEach((item, index) => {
+          handleTreeData(item, data.isAuth);
+        })  
+      }
+    }
+
+    // lodash实现 [{attr: 1, name: 'wong'}, {attr:2, name: 'li'}] => new Map([[1, 'wong'], [2, 'li']])
+    function arrayToMap(arr, key) {
+      return arr.reduce((acc, cur) => {
+        acc.set(cur[key], cur);
+        return acc;
+      }, new Map());
+    }
+
+    const newData = treeData.map(function f(item){
+      if(!item.auth) {
+        item.disabled = true;
+      }
+      if(item.children?.length > 0) {
+        item.children = item.children.map(f);
+      }
+      return item;
+    })
+
+    return new Promise(resolve => {
+        Modal.confirm({
+          title: "提示",
+          content: '修改公共参数会对引用此参数的步骤，流程，方案产生影响，请确认是否修改？',
+ okType: " danger ",
+          zIndex: 11111,
+          onOk() {
+            return new Promise(async(resolve, reject) => {
+              try {
+                const result = await store.saveParamData(newWalues, mode);
+                if(result) {
+                  store.getPageList();
+                  resolve(true);
+                  resolve(false);
+                } catch(err) {
+                  resolve(false);
+                }
+              })
+            },
+          })
+        })
   </script>
 </body>
 </html>
